Bug 512602 - Printer ink level warning for marker-level -3
Summary: Printer ink level warning for marker-level -3
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Printers widget (other bugs)
Version First Reported In: 6.5.3
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-25 16:35 UTC by Roger Noble
Modified: 2025-12-06 15:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roger Noble 2025-11-25 16:35:29 UTC
SUMMARY
My printer correctly returns a marker-level value of -3 for its waste toner cartridge. According to the CUPS documentation this means that the level is unknown but has not yet reached capacity. However plasma is producing a warning message for this value every time I print something. It would be nice if such negative values could be trapped and not trigger a warning.

STEPS TO REPRODUCE
1. Print something to a printer that returns -3 for its waste toner level
2. 
3. 

OBSERVED RESULT
A warning message is produced.

EXPECTED RESULT
No warning should be produced.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: Fedora
KDE Plasma Version: 6.5.3
KDE Frameworks Version: 6.20.0
Qt Version: 6.10.1

ADDITIONAL INFORMATION
Comment 1 Mike 2025-11-25 18:50:56 UTC
ew, yeah, I see, I probably only tested with -1, should be easy to fix/backport.  

Meantime, you can disable the notification via system settings/notifications/Application settings/Printer management to keep from getting nagged.
Comment 2 Roger Noble 2025-11-25 18:56:42 UTC
Thanks Mike.
Comment 3 Bug Janitor Service 2025-11-25 19:52:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/print-manager/-/merge_requests/290
Comment 4 Mike 2025-12-01 17:00:23 UTC
Git commit 440d2e1db585d684d625bc0308a002f8c57c713d by Mike Noe.
Committed on 01/12/2025 at 16:38.
Pushed by noee into branch 'master'.

kded: Fix marker-level checker for CUPS unknown levels

Add a check for unknown/unavailable marker levels, ignore checking
FIXED-IN: 6.5.4

M  +3    -3    src/kded/MarkerLevelChecker.cpp

https://invent.kde.org/plasma/print-manager/-/commit/440d2e1db585d684d625bc0308a002f8c57c713d
Comment 5 Mike 2025-12-01 17:23:28 UTC
Git commit ddc6fe3e661ee3fffc914ed5df331ef605ebb967 by Mike Noe.
Committed on 01/12/2025 at 17:08.
Pushed by noee into branch 'Plasma/6.5'.

kded: Fix marker-level checker for CUPS unknown levels

Add a check for unknown/unavailable marker levels, ignore checking
FIXED-IN: 6.5.4


(cherry picked from commit 440d2e1db585d684d625bc0308a002f8c57c713d)

Co-authored-by: Mike Noe <noeerover@gmail.com>

M  +3    -3    src/kded/MarkerLevelChecker.cpp

https://invent.kde.org/plasma/print-manager/-/commit/ddc6fe3e661ee3fffc914ed5df331ef605ebb967