kded: Fix marker-level checker for CUPS unknown levels

Add a check for unknown/unavailable marker levels, ignore checking

BUG: 512602
FIXED-IN: 6.5.4


(cherry picked from commit 440d2e1db585d684d625bc0308a002f8c57c713d)

Co-authored-by: Mike Noe <noeerover@gmail.com>